[gd_scene load_steps=9 format=3 uid="uid://x4bnweudk8vs"]

[ext_resource type="Script" path="res://screens/play/play.gd" id="1_e80q3"]
[ext_resource type="PackedScene" uid="uid://cbsuvkdplnnqe" path="res://components/background.tscn" id="1_osefx"]
[ext_resource type="AudioStream" uid="uid://b5nu3b0nkreqe" path="res://assets/sounds/it comes_6.wav" id="3_l3dfv"]
[ext_resource type="PackedScene" uid="uid://mp5khaij8tqc" path="res://components/audio/sound_button.tscn" id="3_vnmnx"]
[ext_resource type="PackedScene" uid="uid://bvd76e6u4y8jo" path="res://components/coin/coin.tscn" id="4_3hwp3"]
[ext_resource type="PackedScene" uid="uid://bc4sgbj5vetsv" path="res://components/audio/music_button.tscn" id="4_sc1ii"]
[ext_resource type="PackedScene" uid="uid://bf1r7j2wdhh0k" path="res://components/piggy/piggy.tscn" id="4_wqggr"]
[ext_resource type="PackedScene" uid="uid://cmvf762ty44tn" path="res://components/score/score.tscn" id="5_enghu"]

[node name="PlayContainer" type="Node2D"]
script = ExtResource("1_e80q3")

[node name="EndGameTimer" type="Timer" parent="."]

[node name="Background" parent="." instance=ExtResource("1_osefx")]

[node name="SoundButton" parent="." instance=ExtResource("3_vnmnx")]
offset_left = 303.0
offset_top = 14.0
offset_right = 365.0
offset_bottom = 60.0

[node name="MusicButton" parent="." instance=ExtResource("4_sc1ii")]
offset_left = 388.0
offset_top = 14.0
offset_right = 450.0
offset_bottom = 61.0

[node name="Sounds" type="Node" parent="."]

[node name="Music1" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("3_l3dfv")
bus = &"Music"

[node name="Coins" type="Node" parent="."]

[node name="RightCoin" parent="Coins" instance=ExtResource("4_3hwp3")]
position = Vector2(382, 363)

[node name="BottomCoin" parent="Coins" instance=ExtResource("4_3hwp3")]
position = Vector2(250, 512)

[node name="LeftCoin" parent="Coins" instance=ExtResource("4_3hwp3")]
position = Vector2(112, 363)

[node name="TopCoin" parent="Coins" instance=ExtResource("4_3hwp3")]
position = Vector2(250, 236)

[node name="Piggy" parent="." instance=ExtResource("4_wqggr")]

[node name="Score" parent="." instance=ExtResource("5_enghu")]

[connection signal="timeout" from="EndGameTimer" to="." method="_on_end_game_timer_timeout"]
[connection signal="finished" from="Sounds/Music1" to="." method="_on_music_1_finished"]
[connection signal="body_entered" from="Coins/RightCoin" to="." method="_on_right_coin_body_entered"]
[connection signal="body_entered" from="Coins/BottomCoin" to="." method="_on_bottom_coin_body_entered"]
[connection signal="body_entered" from="Coins/LeftCoin" to="." method="_on_left_coin_body_entered"]
[connection signal="body_entered" from="Coins/TopCoin" to="." method="_on_top_coin_body_entered"]
